dts/testData/inspections/container/RootSubNode.dts
<error descr="Not a valid root entry">name</error> {};

prop = "value";